Twenty Fifteen: make sure the 'says:' in comments is readable by a screen-reader.
Fixes #30479.


Built from https://develop.svn.wordpress.org/trunk@30570


git-svn-id: http://core.svn.wordpress.org/trunk@30560 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfifteen/style.css
+++ b/wp-content/themes/twentyfifteen/style.css
@@ -1173,6 +1173,7 @@ a:focus {
  */
 
 /* Text meant only for screen readers */
+.says,
 .screen-reader-text {
 	clip: rect(1px, 1px, 1px, 1px);
 	height: 1px;
@@ -2216,10 +2217,6 @@ a.post-thumbnail:focus {
 	height: 24px;
 	margin-right: 0.8em;
 	width: 24px;
-}
-
-.says {
-	display: none;
 }
 
 .bypostauthor > article .fn:after {
